--- a/STUDENTEVENT.html
+++ b/STUDENTEVENT.html
@@ -1,11 +1,4 @@
-<DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport"content="width=device-width,initial-scale=1.0">
-<title>student Event Registration<\title>
-<!---bootstrap CSS--->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0alpha1/dist/css/bootstrap.min.css"rel="stylesheet"<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
