--- a/STUDENTEVENT.html
+++ b/STUDENTEVENT.html
@@ -79,6 +79,14 @@
                         <option value="event3">CRT</option>
 			<option value="event4">TT</option>
                     </select>
+			     <label for="event" class="form-label">Select Event</label>
+                    <select class="form-select" id="event" required>
+                        <option value="" disabled selected>Select an event</option>
+                        <option value="event1">CCNA</option>
+                        <option value="event2">Workshop</option>
+                        <option value="event3">CRT</option>
+			<option value="event4">TT</option>
+                    </select>
 
                     <div class="invalid-feedback">
                         Select any event from the list
